added express server, moved directories

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^3.12.1"
+    "eslint": "^3.12.1",
+    "path": "^0.12.7"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
